# Solix

./: .gitignore  CMakeLists.txt  README.md
Code/: CMakeLists.txt
Code/Core/: Application.cpp  Application.h  Assert.cpp  Assert.h  CMakeLists.txt  Color.cpp  Color.h  File.cpp  List.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Optional.h  Result.h  Runtime.cpp  Runtime.h  Time.cpp  Time.h  Variant.cpp  Variant.h
Code/Core/ClassDB/: ClassDB.cpp  ClassDB.h  Property.h
Code/Core/ClassRegistry/: ClassRegistry.cpp  ClassRegistry.h  Property.h
Code/Core/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Code/Editor/: CMakeLists.txt  EditorRuntime.cpp  EditorRuntime.h  Main.cpp
Code/Editor/UI/: GUI.cpp  GUI.h  Widget.cpp  Widget.h
Code/Input/: Input.cpp  Input.h
Code/Renderer/: CMakeLists.txt  IArrayBuffer.h  IRenderer.cpp  IRenderer.h  IShader.h  IVertexArray.h  IWindow.h  Layout.cpp  Layout.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.h  Window.cpp  Window.h
Code/Renderer/OpenGL/: OpenGLArrayBuffer.cpp  OpenGLArrayBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Code/Scene/: Node.cpp  Node.h  Scene.cpp  Scene.h
Code/Scene/2D/: Camera2D.cpp  Camera2D.h  MeshRenderer2D.cpp  MeshRenderer2D.h  Node2D.cpp  Node2D.h
Code/Scene/3D/: Camera3D.cpp  Camera3D.h  MeshRenderer3D.cpp  MeshRenderer3D.h  Node3D.cpp  Node3D.h
Code/UI/: CMakeLists.txt  GUI.cpp  GUI.h  Widget.cpp  Widget.h
Core/: CMakeLists.txt
Core/Core/Graphics/: IWindow.h
Editor/: CMakeLists.txt
Editor/Editor/: Main.cpp
Editor/Editor/Graphics/: Window.cpp  Window.h
Editor/Source/: Main.cpp
Resources/Shaders/: Main.frag  Main.vert
